--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -21,7 +21,7 @@
         </div>
 
         <div class="main">
-          <h1>About Bolt</h1>
+          <h1>About Dulce network</h1>
           <p>Buy or rent from the largest selection of movies and TV episodes. Try it for 30 days absolutely free. After your free trial, it's only $9.99/month for unlimited streaming, anywhere you go.</p>
         </div>
       </div>
