--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -110,7 +110,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-3">
-            <h3>Bolt</h3>
+            <h3>Dulce network</h3>
             <ul>
               <li>Careers</li>
               <li>Terms</li>
@@ -118,7 +118,7 @@
             </ul>
           </div>
           <div class="col-md-3">
-            <h3>More Bolt</h3>
+            <h3>More Dulce</h3>
             <ul>
               <li>Gift Cards</li>
               <li>Trailers</li>
